<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical">
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/introdce_el_valor_de_la_luz"/>-->
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/introdce_el_valor_de_la_luz"-->
            <!--android:id="@+id/zoomIn"-->
            <!--android:ems="10"-->
            <!--android:inputType="numberDecimal"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_proyecto"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_proyecto"
            android:id="@+id/nombre"
            android:ems="10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zona_de_emplazamiento"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zona_de_emplazamiento"
            android:id="@+id/zona"
            android:ems="10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/observaciones"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/observaciones"
            android:id="@+id/obs"
            android:ems="10"/>
    </LinearLayout>
