<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">


                    <HorizontalScrollView
                        android:id="@+id/hscrll1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableLayout
                            android:id="@+id/table"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:divider="@drawable/line_h"
                            android:dividerPadding="1dp"
                            android:showDividers="beginning|middle|end" />

                    </HorizontalScrollView>
                </ScrollView>

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/caudal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caudal_de_dise_o_1_0_f" />
                <TextView
                    android:id="@+id/rango"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_se_cumple_la_condici_n_de_parada"
                    android:textColor="#F00"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seleccione_cauce_principal"
                        android:layout_weight="1"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/causePI"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=".."/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/causePF"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seleccione_ubicaci_n_de_los_estribos"
                        android:layout_weight="1"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/estriboI"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=".."/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/estriboF"/>

                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="finish"
                    android:text="@string/listo"
                    android:textColor="#fff"
                    android:id="@+id/button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/button2"
                    android:layout_toLeftOf="@+id/button"
                    android:layout_toRightOf="@+id/button2"
                    android:layout_toStartOf="@+id/button"
                    android:backgroundTint="#0F0"
                    android:onClick="adicionar_onclick"
                    android:text="@string/adicionar"
                    android:textColor="#fff"
                    android:id="@+id/add"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="limpiar"
                    android:text="@string/limpiar"
                    android:textColor="#fff"
                    android:id="@+id/button2"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>