<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/rea_de_la_cuenca_km_2"
                    android:inputType="numberDecimal"/>

                <EditText
                    android:id="@+id/longitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/longitud_del_r_o_m"
                    android:inputType="numberDecimal"/>

                <EditText
                    android:id="@+id/pendiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/pendiente_m_m"
                    android:inputType="numberDecimal"/>


                <EditText
                    android:id="@+id/hp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hp_mm"
                    android:inputType="numberDecimal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/intensidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/intensidad_mm_min"
                        android:inputType="numberDecimal"
                        android:editable="false"
                        android:enabled="false"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="determinar_intensidad"
                        android:text="@string/determinar" />
                </LinearLayout>

                <!--<EditText-->
                    <!--android:id="@+id/coeficiente"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/coeficiente"-->
                    <!--android:inputType="numberDecimal" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/factor_seg_n_la_probabilidad_de_dise_o"
                        android:layout_weight="1"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/categorias"
                        android:id="@+id/categoria"
                        />
                </LinearLayout>
                <TextView
                    android:layout_margin="10dp"
                android:id="@+id/caudal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />


                <!--<EditText-->
                    <!--android:layout_marginTop="20dp"-->
                    <!--android:id="@+id/nivel_crecida"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/nivel_de_crecida_de_dise_o"-->
                    <!--android:inputType="numberDecimal" />-->

                <!--<EditText-->
                    <!--android:id="@+id/cant_secciones"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/cantidad_de_secciones_del_dise_o"-->
                    <!--android:inputType="numberDecimal" />-->

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#fff">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="finish"
                android:text="Listo"
                android:textColor="#fff" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:backgroundTint="@color/colorAccent"
                android:onClick="exit"
                android:text="Cancelar"
                android:textColor="#fff" />
        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>